<package format="2">
	<name>cob_texture_categorization</name>
	<version>0.1.0</version>
	<description>

		Image processing tool for the categorization of textures.

	</description>
	<author email="richard.bormann@ipa.fraunhofer.de">Richard Bormann, Daniel Hundsdörfer</author>
	<maintainer email="jsf@ipa.fhg.de">Jan Fischer</maintainer>
	<license>LGPL</license>
	<url>http://ros.org/wiki/cob_texture_categorization</url>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>libopencv-dev</depend>
	<depend>pcl_ros</depend>
	<depend>cmake_modules</depend> <!-- needed for tinyxml, boost opencv, or eigen -->
	<depend>roscpp</depend>
	<depend>roslib</depend>
	<depend>cv_bridge</depend>
	<depend>sensor_msgs</depend>
	<depend>message_filters</depend>
	<depend>image_transport</depend>
	<depend>libpcl-all-dev</depend>
	<depend>libvlfeat</depend>
	<depend>cob_surface_classification</depend>

</package>
