<package format="2">
  <name>cob_texture_categorization</name>
  <version>0.1.0</version>

  <description>

     Image processing tool for the categorization of textures.

  </description>

  <author email="richard.bormann@ipa.fraunhofer.de">Richard Bormann, Daniel Hundsdörfer</author>
  <maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>

  <license>LGPL</license>
  <url>http://ros.org/wiki/cob_texture_categorization</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>cob_surface_classification</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>libvlfeat</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all</exec_depend>

</package>
