<?xml version="1.0"?>
<package format="2">
  <name>cob_texture_categorization</name>
  <version>0.1.0</version>

  <description>

     Image processing tool for the categorization of textures.

  </description>

  <author email="richard.bormann@ipa.fraunhofer.de">Richard Bormann, Daniel Hundsdörfer</author>
  <maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>

  <license>LGPL</license>
  <url>http://ros.org/wiki/cob_texture_categorization</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cob_surface_classification</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>libopencv-dev</depend>
  <depend>libvlfeat</depend>
  <depend>message_filters</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <!--build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all</exec_depend-->

</package>
