<package>
  <name>libzxing</name>
  <version>0.1.0</version>
  <description>

     libzxing (wrapper for zxing)

  </description>
  <author>Joshua Hampp</author>
  <maintainer email="jsf@ipa.fhg.de">Jan Fischer</maintainer>
  <license>LGPL</license>
  <url>http://ros.org/wiki/libzxing</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <!--cpp cflags="-I${prefix}/common/include" lflags="-Wl,-rpath,${prefix}/common/lib -L${prefix}/common/lib -lzxing -lMagick++ "/-->
  </export>

</package>


