<package format="2">
  <name>libzxing</name>
  <version>0.1.0</version>
  <description>

     libzxing (wrapper for zxing)

  </description>

  <author>Joshua Hampp</author>
  <maintainer email="josh@ipa.fhg.de">Joshua Hampp</maintainer>

  <license>LGPL</license>
  <url>http://ros.org/wiki/libzxing</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ant</depend>
  <depend>scons</depend>
  <depend>java</depend>

</package>


